Resolve simply getOpponent in all classes + Start creation of the 2v2ManualGameApp