@@ -46,7 +46,7 @@ public class GameStateMapperTest {
         assertEquals(game.getUuid(), gameStateDTO.getUuid());
 
         comparePlayers(game.getCurrentPlayer(), gameStateDTO.getPlayer());
-        comparePlayers(game.getOpponent(), gameStateDTO.getOpponent());
+        comparePlayers(game.getOpponent().get(0), gameStateDTO.getOpponent());
 
         assertNull(gameStateDTO.getCard());
         assertNull(gameStateDTO.getWinner());
@@ -66,7 +66,7 @@ public class GameStateMapperTest {
         assertEquals(game.getUuid(), gameStateDTO.getUuid());
 
         comparePlayers(game.getCurrentPlayer(), gameStateDTO.getPlayer());
-        comparePlayers(game.getOpponent(), gameStateDTO.getOpponent());
+        comparePlayers(game.getOpponent().get(0), gameStateDTO.getOpponent());
 
         assertNotNull(gameStateDTO.getCard());
         compareCard(playedCard, gameStateDTO.getCard());
@@ -86,10 +86,10 @@ public class GameStateMapperTest {
         assertEquals(game.getUuid(), gameStateDTO.getUuid());
 
         comparePlayers(game.getCurrentPlayer(), gameStateDTO.getPlayer());
-        comparePlayers(game.getOpponent(), gameStateDTO.getOpponent());
+        comparePlayers(game.getOpponent().get(0), gameStateDTO.getOpponent());
 
         assertNull(gameStateDTO.getCard());
-        assertEquals(game.getOpponent().getUuid(), gameStateDTO.getWinner());
+        assertEquals(game.getOpponent().get(0).getUuid(), gameStateDTO.getWinner());
         assertNull(gameStateDTO.getChoice());
         assertFalse(gameStateDTO.isForcedAttack());
     }
@@ -104,7 +104,7 @@ public class GameStateMapperTest {
         assertEquals(game.getUuid(), gameStateDTO.getUuid());
 
         comparePlayers(game.getCurrentPlayer(), gameStateDTO.getPlayer());
-        comparePlayers(game.getOpponent(), gameStateDTO.getOpponent());
+        comparePlayers(game.getOpponent().get(0), gameStateDTO.getOpponent());
 
         assertNull(gameStateDTO.getCard());
         assertNull(gameStateDTO.getWinner());
@@ -114,7 +114,7 @@ public class GameStateMapperTest {
 
     @Test
     public void fromGame_targetChoice() {
-        game.setChoice(new TargetChoice(game.getCurrentPlayer(), game.getCurrentPlayer().getHand().getFirst(), new DiscardEffectResolver(new DiscardEffect()), 1, new HashSet<>(game.getOpponent().getHand())));
+        game.setChoice(new TargetChoice(game.getCurrentPlayer(), game.getCurrentPlayer().getHand().getFirst(), new DiscardEffectResolver(new DiscardEffect()), 1, new HashSet<>(game.getOpponent().get(0).getHand())));
 
         GameStateDTO gameStateDTO = GameStateMapper.fromGame(game);
 
@@ -122,14 +122,14 @@ public class GameStateMapperTest {
         assertEquals(game.getUuid(), gameStateDTO.getUuid());
 
         comparePlayers(game.getCurrentPlayer(), gameStateDTO.getPlayer());
-        comparePlayers(game.getOpponent(), gameStateDTO.getOpponent());
+        comparePlayers(game.getOpponent().get(0), gameStateDTO.getOpponent());
 
         assertNull(gameStateDTO.getCard());
         assertNull(gameStateDTO.getWinner());
 
         TargetChoiceDTO choiceDTO = assertInstanceOf(TargetChoiceDTO.class, gameStateDTO.getChoice());
         assertEquals(ChoiceType.TARGET, choiceDTO.getType());
-        compareCards(game.getOpponent().getHand(), new ArrayList<>(choiceDTO.getAvailableTargets()));
+        compareCards(game.getOpponent().get(0).getHand(), new ArrayList<>(choiceDTO.getAvailableTargets()));
         assertEquals(1, choiceDTO.getTargetsCount());
         assertFalse(choiceDTO.getOptional());
         compareCard(game.getCurrentPlayer().getHand().getFirst(), choiceDTO.getSourceCard());
